# advent-of-code

./: .gitignore  main.js  map.json  package-lock.json  package.json  santas-helper  utils.js
2015/: index.ts  package.json  tsconfig.json
2018/: Cargo.toml  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  main
2019/: README.md  main.js  package-lock.json  package.json  tsconfig.json  utils.js
2020/: days.ts  main.ts  package.json  s.json  tsconfig.json  utils.ts
2021/: README.md  days.ts  index.ts  logger.ts  next-day.ts  scripts.yaml  tree.txt
2022/: .gitignore  README.md  package.json  tsconfig.json
2023/: .gitignore  santas-helper
2023/days/21/: Cargo.toml  main.rs
2025/days/10/: Cargo.toml  main.rs
day-1/: index.js
day-10/: get-astroid-count.js  index.js  line-old.js  line.js  notes.md  parse-map.js  vaporize.js
day-11/: index.js  map.html  read-intcode.js  robot-map.js
day-12/: index.js
day-13/: index.html  index.js  read-intcode.js
day-14/: index.js
day-15/: a-star.js  direction.js  flood.js  index.js  map-flood.html  map.html  read-incode.js
day-16/: index.js
day-17/: get-html-map.js  get-map.js  index.js  map.html  navigate-map.js  read-incode.js
day-18/: a-star.js  get-html-map.js  get-map.js  index.js  map.html  result.json
day-2/: index.js  read-intcode.js
day-3/: get-distance.js  get-instersection.js  index.js  to-path.js
day-4/: get-passwords.js  index.js
day-5/: index.js  read-intcode.js
day-6/: find-shortest-path.js  get-orbit-graph.js  index.js  test.txt
day-7/: child_process.js  get-permutations.js  index.js  (+2 more)
(+434 files in other folders)
