[package]
name = "aoc-2023-21"
version = "1.74.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.14.3"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }

[[bin]]
name = "aoc-2023-21"
path = "main.rs"
