[package]
name = "aoc-2025-10"
version = "1.84.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.16.1"
z3 = {version = "0.13.3", features = ["gh-release"]}

[[bin]]
name = "aoc-2025-10"
path = "main.rs"
